added carousel and changing values

--- a/index.html
+++ b/index.html
@@ -250,11 +250,28 @@
       </figure>
     </section>
 
-    <!-- <section class="carrossel container" id="carrossel1">
+    <!-- <section class="carrossel container" id="carrossel2">
       <div class="food-menu">
         <div>
-          <h2>Ofertas Especiais</h2>
+          <h1>Ofertas Especiais</h1>
           <p>Confira abaixo os alimentos em promoção</p>
+        </div>
+        <a href="./pages/catalogo.html">Ver mais</a>
+      </div>
+      <div class="swiper mySwiper">
+        <div
+          class="swiper-wrapper swiper-wrapper-drinks"
+          id="swiper-wrapper-drinks"
+        ></div>
+        <div class="swiper-pagination swiper-pagination-drinks"></div>
+      </div>
+    </section> -->
+
+    <section class="carrossel container" id="carrossel1">
+      <div class="food-menu">
+        <div>
+          <h2>Produtos</h2>
+          <p>Confira abaixo alguns produtos</p>
         </div>
         <a href="./pages/catalogo.html">Ver mais</a>
       </div>
@@ -265,7 +282,7 @@
         ></div>
         <div class="swiper-pagination swiper-pagination-food"></div>
       </div>
-    </section> -->
+    </section>
 
     <section class="about container" id="about">
       <div class="boxAbout">
@@ -292,23 +309,6 @@
         </figcaption>
       </div>
     </section>
-
-    <!-- <section class="carrossel container" id="carrossel2">
-      <div class="food-menu">
-        <div>
-          <h1>Ofertas Especiais</h1>
-          <p>Confira abaixo os alimentos em promoção</p>
-        </div>
-        <a href="./pages/catalogo.html">Ver mais</a>
-      </div>
-      <div class="swiper mySwiper">
-        <div
-          class="swiper-wrapper swiper-wrapper-drinks"
-          id="swiper-wrapper-drinks"
-        ></div>
-        <div class="swiper-pagination swiper-pagination-drinks"></div>
-      </div>
-    </section> -->
 
     <div class="boxContacts" id="contacts">
       <div class="container">
@@ -359,7 +359,7 @@
           </li>
           <li>
             <i class="fal fa-box-full"></i>
-            <h2>Frete grátis a partir de R$ 9,00</h2>
+            <h2>Frete grátis a partir de R$ 50,00</h2>
             <p>
               Ao se cadastrar no Gavião Frutas, você tem frete grátis em vários
               produtos.
