Bug carrosel resolved

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           class="swiper-wrapper swiper-wrapper-food"
           id="swiper-wrapper-food"
         ></div>
-        <div class="swiper-pagination swiper-pagination-food"></div>
+        <!-- <div class="swiper-pagination swiper-pagination-food"></div> -->
       </div>
     </section>
 
