--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           saborosos.
         </p>
         <a
-          href="https://api.whatsapp.com/send/?phone=5582987114659&text&type=phone_number&app_absent=0"
+          href="https://api.whatsapp.com/send/?phone=5582987114659&text=Ol%C3%A1%2C%20Gavi%C3%A3o%20Frutas%20e%20Verduras%21%20Estou%20interessado%20em%20saber%20mais%20sobre%20os%20produtos%20frescos%20que%20voc%C3%AAs%20oferecem.%20Poderiam%20me%20fornecer%20mais%20informa%C3%A7%C3%B5es%20e%20pre%C3%A7os%3F%20Obrigado%21&type=phone_number&app_absent=0"
           target="_blank"
           class="buttonAll"
         >
@@ -323,7 +323,7 @@
             <li>
               <a
                 title="Whatsapp"
-                href="https://api.whatsapp.com/send/?phone=5582987114659&text&type=phone_number&app_absent=0"
+                href="https://api.whatsapp.com/send/?phone=5582987114659&text=Ol%C3%A1%2C%20Gavi%C3%A3o%20Frutas%20e%20Verduras%21%20Estou%20interessado%20em%20saber%20mais%20sobre%20os%20produtos%20frescos%20que%20voc%C3%AAs%20oferecem.%20Poderiam%20me%20fornecer%20mais%20informa%C3%A7%C3%B5es%20e%20pre%C3%A7os%3F%20Obrigado%21&type=phone_number&app_absent=0"
                 target="_blank"
                 ><i class="fab fa-whatsapp buttonAll active"></i>
                 <p>(82) 98711-4659</p>
