Deleted prices itens

--- a/index.html
+++ b/index.html
@@ -212,16 +212,16 @@
           <i class="fal fa-times"></i>
         </span>
         <div class="cart-summary">
-          <div class="cart-subtotal">
+          <!-- <div class="cart-subtotal">
             <span>TOTAL:</span>
             <span class="subtotal-value">$0.00</span>
-          </div>
+          </div> -->
           <button
             target="_blank"
             class="checkout-btn buttonAll"
             onclick="sendWhatsAppMessage()"
           >
-            Finalizar Compra
+            Comprar agora
           </button>
         </div>
       </div>
