--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -249,16 +249,16 @@
         <h2>Meu Carrinho</h2>
         <ul class="cart-list"></ul>
         <div class="cart-summary">
-          <div class="cart-subtotal">
+          <!-- <div class="cart-subtotal">
             <span>Subtotal:</span>
             <span class="subtotal-value">$0.00</span>
-          </div>
+          </div> -->
           <button
             target="_blank"
             class="checkout-btn buttonAll"
             onclick="sendWhatsAppMessage()"
           >
-            Finalizar Compra
+            Comprar agora
           </button>
         </div>
       </div>
