chore: ignore .DS_Store and keep yarn lockfile tracked

--- a/index.html
+++ b/index.html
@@ -57,11 +57,6 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
-      rel="stylesheet"
-      async
-    />
-    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       async
@@ -137,7 +132,7 @@
     ></noscript>
 
     <a href="#home" class="back-to-top">
-      <i class="fal fa-arrow-to-top"></i>
+      <i class="fas fa-arrow-up"></i>
     </a>
 
     <header class="nav">
@@ -156,13 +151,13 @@
         </ul>
 
         <div class="btnCart" onclick="openCartMenu()">
-          <i class="fal fa-shopping-bag"></i>
+          <i class="fas fa-shopping-bag"></i>
           <span class="cart-count">0</span>
         </div>
 
         <div class="userConfig">
           <div class="buttonConfigUser">
-            <i class="fal fa-user"></i>
+            <i class="fas fa-user"></i>
             <p></p>
           </div>
 
@@ -175,7 +170,7 @@
                 id="logoutButton"
                 onclick="logout()"
               >
-                <i class="far fa-sign-out"></i> Sair
+                <i class="fas fa-sign-out-alt"></i> Sair
               </button>
               <button
                 type="button"
@@ -185,7 +180,7 @@
                 title="Fazer Login"
                 style="display: none"
               >
-                <i class="far fa-sign-out"></i> Fazer Login
+                <i class="fas fa-sign-out-alt"></i> Fazer Login
               </button>
             </div>
           </form>
@@ -197,8 +192,8 @@
         <div class="iconsMenuMobile">
           <!-- Mostrando usuario logado na page -->
 
-          <i id="btnOpenMenu" class="fal fa-bars"></i>
-          <i id="btnCloseMenu" class="fal fa-times"></i>
+          <i id="btnOpenMenu" class="fas fa-bars"></i>
+          <i id="btnCloseMenu" class="fas fa-times"></i>
         </div>
       </nav>
     </header>
@@ -209,7 +204,7 @@
 
         <ul class="cart-list"></ul>
         <span class="close-btn" onclick="closeCartMenu()">
-          <i class="fal fa-times"></i>
+          <i class="fas fa-times"></i>
         </span>
         <div class="cart-summary">
           <!-- <div class="cart-subtotal">
@@ -349,7 +344,7 @@
       <div class="container">
         <ul>
           <li>
-            <i class="fal fa-credit-card"></i>
+            <i class="fas fa-credit-card"></i>
             <h2>Escolha como pagar</h2>
             <p>
               No Gavião Frutas, você pode pagar com cartão de crédito ou Pix.
@@ -358,7 +353,7 @@
             </p>
           </li>
           <li>
-            <i class="fal fa-box-full"></i>
+            <i class="fas fa-box-open"></i>
             <h2>Frete grátis a partir de R$ 50,00</h2>
             <p>
               Ao se cadastrar no Gavião Frutas, você tem frete grátis em vários
@@ -366,7 +361,7 @@
             </p>
           </li>
           <li>
-            <i class="fal fa-shield-check"></i>
+            <i class="fas fa-shield-alt"></i>
             <h2>Sua segurança</h2>
             <p>
               Sua navegação é segura com o Google. Nós protegemos seus dados
@@ -400,19 +395,19 @@
           <h4>Menu</h4>
           <ul>
             <li>
-              <a href="#"><i class="far fa-chevron-right"></i>Início</a>
+              <a href="#"><i class="fas fa-chevron-right"></i>Início</a>
             </li>
             <li>
-              <a href="#about"><i class="far fa-chevron-right"></i>Sobre Nós</a>
+              <a href="#about"><i class="fas fa-chevron-right"></i>Sobre Nós</a>
             </li>
             <li>
               <a href="pages/catalogo.html"
-                ><i class="far fa-chevron-right"></i>Catálogo</a
+                ><i class="fas fa-chevron-right"></i>Catálogo</a
               >
             </li>
             <li>
               <a href="#contacts"
-                ><i class="far fa-chevron-right"></i>Contatos</a
+                ><i class="fas fa-chevron-right"></i>Contatos</a
               >
             </li>
           </ul>
@@ -449,7 +444,6 @@
 
     <script src="products.js"></script>
     <script src="storage.js"></script>
-    <script src="icons/fontawesome.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
