--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -67,11 +67,6 @@
       rel="stylesheet"
     />
     <link
-      href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
-      rel="stylesheet"
-      async
-    />
-    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       async
@@ -157,7 +152,7 @@
     ></noscript>
 
     <a href="#home" class="back-to-top">
-      <i class="fal fa-arrow-to-top"></i>
+      <i class="fas fa-arrow-up"></i>
     </a>
 
     <header class="nav">
@@ -176,13 +171,13 @@
         </ul>
 
         <div class="btnCart" onclick="openCartMenu()">
-          <i class="fal fa-shopping-bag"></i>
+          <i class="fas fa-shopping-bag"></i>
           <span class="cart-count">0</span>
         </div>
 
         <div class="userConfig">
           <div class="buttonConfigUser">
-            <i class="fal fa-user"></i>
+            <i class="fas fa-user"></i>
             <p></p>
           </div>
 
@@ -195,7 +190,7 @@
                 id="logoutButton"
                 onclick="logout()"
               >
-                <i class="far fa-sign-out"></i> Sair
+                <i class="fas fa-sign-out-alt"></i> Sair
               </button>
               <button
                 type="button"
@@ -205,7 +200,7 @@
                 title="Fazer Login"
                 style="display: none"
               >
-                <i class="far fa-sign-out"></i> Fazer Login
+                <i class="fas fa-sign-out-alt"></i> Fazer Login
               </button>
             </div>
           </form>
@@ -215,8 +210,8 @@
         </div>
 
         <div class="iconsMenuMobile">
-          <i id="btnOpenMenu" class="fal fa-bars"></i>
-          <i id="btnCloseMenu" class="fal fa-times"></i>
+          <i id="btnOpenMenu" class="fas fa-bars"></i>
+          <i id="btnCloseMenu" class="fas fa-times"></i>
         </div>
       </nav>
     </header>
@@ -244,7 +239,7 @@
     <div class="cart-menu" id="cart-menu">
       <div class="cart-menu-content">
         <span class="close-btn" onclick="closeCartMenu()">
-          <i class="fal fa-times"></i>
+          <i class="fas fa-times"></i>
         </span>
         <h2>Meu Carrinho</h2>
         <ul class="cart-list"></ul>
@@ -350,20 +345,20 @@
           <ul>
             <li>
               <a href="../index.html#home"
-                ><i class="far fa-chevron-right"></i>Home</a
+                ><i class="fas fa-chevron-right"></i>Home</a
               >
             </li>
             <li>
               <a href="../index.html#about"
-                ><i class="far fa-chevron-right"></i>Sobre Nós</a
+                ><i class="fas fa-chevron-right"></i>Sobre Nós</a
               >
             </li>
             <li>
-              <a href="#"><i class="far fa-chevron-right"></i>Catálogo</a>
+              <a href="#"><i class="fas fa-chevron-right"></i>Catálogo</a>
             </li>
             <li>
               <a href="../index.html#contacts"
-                ><i class="far fa-chevron-right"></i>Contatos</a
+                ><i class="fas fa-chevron-right"></i>Contatos</a
               >
             </li>
           </ul>
@@ -398,7 +393,6 @@
     ></script>
 
     <script src="../storage.js"></script>
-    <script src="../icons/fontawesome.js"></script>
     <script src="../products.js"></script>
     <script src="../index.js"></script>
   </body>
