--- a/pages/login.html
+++ b/pages/login.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/64d58efce2.js"
-      crossorigin="anonymous"
-    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
     <link rel="stylesheet" href="login.css" />
     <link
       rel="stylesheet"
@@ -27,7 +27,7 @@
   <body>
     <div class="container boxForms">
       <a href="../index.html" class="buttonBack">
-        <i class="fal fa-arrow-left"></i>
+        <i class="fas fa-arrow-left"></i>
         <p>Voltar</p>
       </a>
       <div class="forms-container">
@@ -145,7 +145,6 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="login.js"></script>
-    <script src="../icons/fontawesome.js"></script>
     <script src="../index.js"></script>
     <script src="getUserData.js"></script>
     
