--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -324,11 +324,45 @@
       </div>
     </section>
     <section id="googleMaps">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3933.938522561456!2d-35.82500931691304!3d-9.600562277432925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x701490160ded679%3A0xa06f375f5c8af1c8!2sGavi%C3%A3o%20frutas!5e0!3m2!1spt-BR!2sbr!4v1716677738880!5m2!1spt-BR!2sbr"
-        allowfullscreen=""
-        referrerpolicy="no-referrer-when-downgrade"
-      ></iframe>
+      <div class="map-shell">
+        <div class="map-info">
+          <h3>Venha nos visitar</h3>
+          <p>
+            Rua São Pedro, Santa Luzia do Norte - AL. Atendimento rápido no
+            balcão e pelo WhatsApp.
+          </p>
+          <div class="map-actions">
+            <a
+              class="map-action primary"
+              href="https://www.google.com/maps/dir/?api=1&destination=Gavi%C3%A3o+frutas+Santa+Luzia+do+Norte"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fas fa-route"></i> Traçar rota
+            </a>
+            <button type="button" class="map-action" onclick="copyStoreAddress()">
+              <i class="fas fa-copy"></i> Copiar endereço
+            </button>
+            <a
+              class="map-action"
+              href="https://wa.me/5582987114659?text=Ol%C3%A1%2C%20quero%20fazer%20um%20pedido."
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fab fa-whatsapp"></i> Pedir no WhatsApp
+            </a>
+          </div>
+        </div>
+        <div class="map-embed-wrap">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3933.938522561456!2d-35.82500931691304!3d-9.600562277432925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x701490160ded679%3A0xa06f375f5c8af1c8!2sGavi%C3%A3o%20frutas!5e0!3m2!1spt-BR!2sbr!4v1716677738880!5m2!1spt-BR!2sbr"
+            loading="lazy"
+            allowfullscreen=""
+            title="Mapa da Gavião Frutas"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </div>
     </section>
     <footer>
       <div class="inforsFooter">
