--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link
-      rel="shortcut icon"
-      href="assets/imgs/icon.webp"
-      type="image/x-icon"
+      rel="icon"
+      type="image/webp"
+      href="assets/imgs/icongaviaofrutas.webp?v=4"
     />
+    <link rel="shortcut icon" href="assets/imgs/icongaviaofrutas.webp?v=4" />
+    <link
+      rel="apple-touch-icon"
+      href="assets/imgs/icongaviaofrutas.webp?v=4"
+    />
+    <link rel="manifest" href="site.webmanifest?v=4" />
 
     <title>
       Gavião Frutas e Alimentos - Atacadista de Frutas em Santa Luzia do Norte
@@ -138,7 +144,7 @@
     <header class="nav">
       <nav class="menu-wrap">
         <a href="#home" class="logo">
-          <img src="assets/imgs/logo.webp" alt="Logo Gavião Frutas" />
+          <img src="assets/imgs/logooficial.webp" alt="Logo Gavião Frutas" />
           <h2>Gavião Frutas</h2>
         </a>
 
