--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -7,10 +7,16 @@
 
     <!-- Ícone da página (favicon) -->
     <link
-      rel="shortcut icon"
-      href="../assets/imgs/icon.webp"
-      type="image/x-icon"
+      rel="icon"
+      type="image/webp"
+      href="../assets/imgs/icongaviaofrutas.webp?v=4"
     />
+    <link rel="shortcut icon" href="../assets/imgs/icongaviaofrutas.webp?v=4" />
+    <link
+      rel="apple-touch-icon"
+      href="../assets/imgs/icongaviaofrutas.webp?v=4"
+    />
+    <link rel="manifest" href="../site.webmanifest?v=4" />
 
     <!-- Título otimizado -->
     <title>Gavião Frutas e Alimentos - Catálogo</title>
@@ -158,7 +164,7 @@
     <header class="nav">
       <nav class="menu-wrap">
         <a href="../index.html#home" class="logo">
-          <img src="../assets/imgs/logo.webp" alt="logo gavião frutas" />
+          <img src="../assets/imgs/logooficial.webp" alt="logo gavião frutas" />
           <h2>Gavião Frutas</h2>
         </a>
 
