--- a/pages/login.html
+++ b/pages/login.html
@@ -13,10 +13,16 @@
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
     />
     <link
-      rel="shortcut icon"
-      href="../assets/imgs/icon.webp"
-      type="image/x-icon"
+      rel="icon"
+      type="image/webp"
+      href="../assets/imgs/icongaviaofrutas.webp?v=4"
     />
+    <link rel="shortcut icon" href="../assets/imgs/icongaviaofrutas.webp?v=4" />
+    <link
+      rel="apple-touch-icon"
+      href="../assets/imgs/icongaviaofrutas.webp?v=4"
+    />
+    <link rel="manifest" href="../site.webmanifest?v=4" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
