header/menu responsivos em tablet e mobile (breakpoints 1100/820)

--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -213,6 +213,7 @@
           <h2 class="title">
             <span>Bem-vindo(a)</span> <strong id="username"></strong>
           </h2>
+          <p class="loginQuickHint">Entrar / Cadastro</p>
         </div>
 
         <div class="iconsMenuMobile">
