--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
           <h2 class="title">
             <span>Bem-vindo(a)</span> <strong id="username"></strong>
           </h2>
+          <p class="loginQuickHint">Entrar / Cadastro</p>
         </div>
 
         <div class="iconsMenuMobile">
