feat: atualizar hero da home com imagem mulherabacaxi e ajustes visuais responsivos

--- a/index.html
+++ b/index.html
@@ -231,11 +231,10 @@
 
     <section id="home" class="bannerInitial">
       <div class="bannerTexts">
-        <h1>Gavião Frutas e Verduras</h1>
+        <h1>Seu Mercadinho de Frutas e Verduras</h1>
         <p>
-          Bem-vindo à Gavião Frutas! Frutas e verduras frescas entregues em
-          <strong></strong>. Encomende agora e desfrute de alimentos saudáveis e
-          saborosos.
+          Mais economia no dia a dia: você pede pelo Instagram ou WhatsApp e
+          retira na loja com qualidade garantida.
         </p>
         <a
           href="https://api.whatsapp.com/send/?phone=5582987114659&text=Ol%C3%A1%2C%20Gavi%C3%A3o%20Frutas%20e%20Verduras%21%20Estou%20interessado%20em%20saber%20mais%20sobre%20os%20produtos%20frescos%20que%20voc%C3%AAs%20oferecem.%20Poderiam%20me%20fornecer%20mais%20informa%C3%A7%C3%B5es%20e%20pre%C3%A7os%3F%20Obrigado%21&type=phone_number&app_absent=0"
@@ -247,7 +246,11 @@
       </div>
 
       <figure>
-        <img src="assets/imgs/womanfruit.webp" alt="Página Inicial" />
+        <img
+          class="heroMainImage"
+          src="assets/imgs/mulherabacaxi.webp"
+          alt="Página Inicial"
+        />
         <div></div>
       </figure>
     </section>
