--- a/pages/login.html
+++ b/pages/login.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="canonical" href="https://gaviaofrutas.com.br/pages/login.html" />
+    <meta name="description" content="Acesse ou crie sua conta no Gavião Frutas para agilizar seus pedidos e atendimento na loja." />
+    <meta name="robots" content="noindex, follow" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -15,14 +18,14 @@
     <link
       rel="icon"
       type="image/webp"
-      href="../assets/imgs/icongaviaofrutas.webp?v=4"
+      href="../assets/imgs/favicon-48.webp?v=6"
     />
-    <link rel="shortcut icon" href="../assets/imgs/icongaviaofrutas.webp?v=4" />
+    <link rel="shortcut icon" href="../assets/imgs/favicon-48.webp?v=6" />
     <link
       rel="apple-touch-icon"
-      href="../assets/imgs/icongaviaofrutas.webp?v=4"
+      href="../assets/imgs/logo-mark.webp?v=6"
     />
-    <link rel="manifest" href="../site.webmanifest?v=4" />
+    <link rel="manifest" href="../site.webmanifest?v=6" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
